--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.19.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "http-proxy-middleware": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
